# ad_buy_engine

./: .env  .gitignore  .gitignore2  Cargo.toml  Dockerfile  DockerfileCouch  Makefile  TODO.MD  config.ini  docker-compose.yml  regexes.yaml
campaign_server/: Cargo.toml  TABNINE
campaign_server/src/: campaign_agent.rs  helper_functions.rs  main.rs  private_routes.rs  public_routes.rs  server.rs  test_routes.rs  tests.rs
campaign_server/src/api/: account.rs  auth.rs  campaign_state.rs  click.rs  health.rs  invitation.rs  mod.rs  pouch_db.rs  user.rs
campaign_server/src/api/campaign_server_api/: action.rs  click.rs  extra_multiple.rs  extra_single.rs  mod.rs
campaign_server/src/api/crud/: mod.rs  visits.rs
campaign_server/src/api/crud/click_identity/: mod.rs  read.rs  store.rs  write.rs
campaign_server/src/db/: account_depricating.rs  invitation_depricating.rs  mod.rs  user_depricating.rs
campaign_server/src/db/crud/: campaign.rs  click_identity.rs  funnel.rs  landing_page.rs  mod.rs  offer.rs  offer_source.rs  traffic_source.rs
campaign_server/src/dns/: dns_cname.rs
campaign_server/src/email_service/: mailgun_user_init.rs
campaign_server/src/management/: couch.rs  mod.rs
campaign_server/src/management/api/: debug.rs  email.rs
campaign_server/src/utils/: authentication.rs  cache.rs  config.rs  database.rs  errors.rs  helpers.rs  state.rs
campaign_server/src/utils/middleware/: auth.rs  click_processor.rs
couch_app/: Cargo.toml  Dockerfile
couch_app/src/: apis.rs  couch_admin.rs  error.rs  main.rs  test.rs  typed_couch_docs.rs
couchdb/: docker.ini
frontend/: Cargo.toml  index.html  package-lock.json  package.json  rollup.config.js
frontend/html/: index.html
frontend/html/assets/: frontend-6348e9e2.wasm
frontend/src/: lib.rs
frontend/src/agents/: auth_checker.rs  fetch_agent.rs
frontend/src/agents/fetch_agent/: clone.rs  create.rs  deactivate.rs  reactivate.rs  sync.rs  update.rs
frontend/src/appstate/: app_state.rs  app_state_initialize.rs  crud_app_state.rs  sync_app_state.rs  user_account_state.rs
frontend/src/appstate/tab_state/main_tab/: main_tab_state.rs
frontend/src/appstate/tab_state/report_tab/: report_tab_state.rs
frontend/src/components/: database_component.rs  main_component.rs  mod.rs  tab_state.rs
frontend/src/components/account_tab_section/custom_conversions/: mod.rs  modal.rs
frontend/src/components/account_tab_section/referrer_handling/: mod.rs  modal.rs
frontend/src/components/app_bar/: logout.rs  mod.rs
frontend/src/components/page_utilities/: create_element_button.rs  date_range.rs  filter_options.rs  first_column_grouping.rs  row_limit.rs  second_column_grouping.rs  third_column_grouping.rs  update_element.rs
frontend/src/components/page_utilities/crud_element/: crud_campaign.rs  crud_funnels.rs  crud_landing_page.rs  crud_offer.rs  crud_offer_sources.rs  crud_traffic_source.rs  notes.rs  select_custom_event.rs  small_switch.rs  toggle_switch.rs  whitelist_postback_ips.rs
frontend/src/components/page_utilities/crud_element/complex_sub_component/: campaign_sequence_builder.rs  condition_view.rs  lander_url_generator.rs  lander_url_token_selector.rs  landing_page_click_url_generator.rs  landing_page_selector.rs  lhs_conditional_sequences.rs  lhs_default_sequences.rs  listicle_builder.rs  matrix_builder.rs  matrix_builder_utils.rs  mod.rs  offer_selector.rs  offer_url_generator.rs  offer_url_token_selector.rs  payout_type_handler.rs  plus_button.rs  pre_landing_page_selector.rs  rhs_funnel_view.rs  rhs_funnel_view_basic.rs  rhs_sequence_builder.rs  tags_selector.rs  traffic_source_postback_url_generator.rs  traffic_source_postback_url_token_selector.rs  traffic_source_url_parameter_configuration.rs
frontend/src/components/page_utilities/crud_element/complex_sub_component/matrix_builder_utils/: remove_matrix.rs
frontend/src/components/page_utilities/crud_element/dropdowns/: condition_dropdown.rs  connection_type_dropdown.rs  cost_model_dropdown.rs  country_dropdown.rs  currency_dropdown.rs  custom_event_dropdown.rs  device_type_dropdown.rs  funnel_dropdown.rs  iso_language_dropdown.rs  landing_page_dropdown.rs  offer_dropdown.rs  offer_source_dropdown.rs  pre_landing_page_dropdown.rs  referrer_handling_dropdown.rs  sequence_type_dropdown.rs  time_zone_dropdown.rs  tracking_domain_dropdown.rs  tracking_method_dropdown.rs  traffic_source_dropdown.rs  week_day_dropdown.rs
frontend/src/database/: database.rs  errors.rs  mod.rs  types.rs
frontend/src/database/js_pouchdb/: bindings.rs
frontend/src/utils/: mod.rs  routes.rs
frontend/src/utils/javascript/: js-scripts.js  js_bindings.rs
frontend/src/utils/pouchdb/: bindings.rs  database.rs  errors.rs  mod.rs  types.rs
frontend/src/utils/pouchdb_rs/: document.rs  error.rs  mod.rs  responses.rs
frontend/src/utils/pouchdb_rs/events/: changes_event_emitter.rs  replication_event_emitter.rs
frontend/src/utils/pouchdb_rs/options/: changes.rs  replication.rs  selector.rs
main_server/: Cargo.toml
main_server/src/: main.rs  server.rs
main_server/src/utils/: authentication.rs  errors.rs
migrations/2021-02-17-233616_visit/: up.sql
migrations/2021-04-21-022824_click_identity/: down.sql  up.sql
migrations/2021-04-25-020026_linkedconversion/: down.sql  up.sql
migrations/2021-05-08-041627_visit_ledger/: down.sql  up.sql
src/: backend_errors.rs  lib.rs  macros.rs  schema.rs
src/constant/: database_info.rs  server_info.rs
src/constant/email/: email_service_info.rs
src/data/: account.rs  visit.rs
src/data/backend_models/: account.rs  campaign.rs  click_identity.rs  linked_conversion.rs  mod.rs  visit.rs  visit_ledger.rs
src/data/elements/: campaign.rs  funnel.rs  matrix.rs
src/data/elements/funnel/: conditional_sequence_defailts.rs
src/data/elements/matrix/: live_matrix.rs  (+1 more)
src/data/sync/: mod.rs  sync_update.rs  sync_visit.rs
src/data/visit/: click_event.rs  click_map.rs  conversion.rs  geo_ip.rs  user_agent.rs  visit_identity.rs
static/main/secure/: abe.js  frontend.js  index.html  pouchdb.js
tertiary_frontend/src/: lib.rs
(+7 files in other folders)
