[package]
name = "ad_buy_engine"
version = "0.2.0"
authors = ["johnwaltonvi <johnwalton@protonmail.com>"]
edition = "2018"

[features]
backend = ["diesel", "couch_rs", "tokio"]
ua-parser = ["user-agent-parser"]

[dependencies]
tokio = { version = "0.2.6", features = [], optional = true}
anyhow = "1.0.32"
ipnet = {version="2.3.0",features=["serde"]}
diesel = { version = "1.4.5", features = ["chrono", "postgres", "sqlite", "r2d2", "uuidv07"], optional=true }
couch_rs = {version = "0.8.30",optional = true}
uuid = { version = "0.7.0", features = [ "v4", "serde", "wasm-bindgen"] }
either =  {version="1.6.0", features=["serde"]}
strum = "0.20.0"
strum_macros = "0.20.1"
random_name_generator = "0.1.0"
weighted-rs = "0.1.2"
chrono = {version="0.4.15",features=["serde", "wasm-bindgen", "wasmbind"]}
boyer-moore-magiclen = "0.2.10"
serde_json = {version="1.0.57",features=["preserve_order"]}
rust_decimal = {version="1.13.0",features=["serde","serde_json"]}
user-agent-parser = { version="0.2.7",optional=true}
maxminddb = "0.17.2"
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.11"
rand = { version = "0.7", features = ["wasm-bindgen"] }
url =  {version="2.1.1", features=["serde"]}
traversal = "0.1.2"

serde = { version = "1.0.116", features = ["derive", "rc","alloc"] }
serde_derive = "1.0.116"
derive_more = "0.99.13"
env_logger = "0.8.3"
envy = "0.4.2"
time = "0.3.0-alpha-0"

[workspace]
members=[
    "campaign_server",
    "frontend",
    "tertiary_frontend",
]