[package]
name = "campaign_server"
version = "0.1.0"
authors = ["johnwaltonvi <johnwalton@protonmail.com>"]
edition = "2018"

[dependencies]
ad_buy_engine = { version = "0.2.0", path = "../", feature=["backend","ua-parser"] }
awc = "3.0.0-beta.5"
actix-web = {version="4.0.0-beta.6"}
#actix-identity = "0.3.1"
actix-identity = "0.4.0-beta.1"
actix = "0.11.1"
actix-redis = "0.10.0-beta.1"
#actix-redis = "0.9.2"
redis-async = "0.9.2"
mailgun-rs = "0.1.3"
openssl = "0.10.34"
actix-ratelimit = "0.3.1"
actix-files = "0.5.0"
futures = "0.3.15"
actix-service = "2.0.0"
lazy_static = "1.4.0"
argon2rs = "0.2.5"
jsonwebtoken = "8.0.0-beta.2"
actix-cors = "0.5.4"
actix-web-middleware-redirect-scheme = "3.0.0"
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
#actix-files = "0.6.0-beta.4"
#actix-cors = "0.6.0-beta.1"
#actix-cors = "0.5.4"
#actix-files = "0.5.0"
#actix-files = "0.6.0-beta.4"
#actix-identity = "0.3.1"
#actix-identity = "0.4.0-beta.1"
#actix-redis = "0.10.0-beta.1"
#actix-ratelimit = "0.3.1"
#actix-utils = "3.0.0"
#actix-service = "2.0.0"
#actix-web = "4.0.0-beta.6"
#actix-web = {version="4.0.0-beta.5"}
#actix-web = {git = "https://github.com/actix/actix-web", branch = "master"}
#actix-web = {version="4 .0.0-beta.6",features = ["openssl"]}
#actix-web-middleware-redirect-scheme = "3.0.0"
#openssl = "0.10.34"
#diesel = { version = "1.4.5", features = ["chrono", "postgres", "sqlite", "r2d2", "uuidv07"] }
#dotenv = "0.15.0"
#envy = "0.4.1"
#env_logger = "0.7.1"
#futures = "0.3.5"
#lazy_static = "1.4.0"
#listenfd = "0.3.3"
#log = "0.4.11"
#rayon = "1.4.0"
#redis-async = "0.6.3"

#validator = "0.11.0"
#validator_derive = "0.11.0"
#strum_macros = "0.19.2"
#mailgun-rs = {version="0.1.3",optional=false}

serde = { version = "1.0.116", features = ["derive", "rc","alloc"] }
serde_derive = "1.0.116"
derive_more = "0.99.13"

#[dev-dependencies]
#actix-http-test = "2.0.0"

[features]
cockroach = []
mysql = []
postgres = []
sqlite = []
default = ["postgres"]