[package]
name = "campaign_server"
version = "0.1.0"
authors = ["johnwaltonvi <johnwalton@protonmail.com>"]
edition = "2018"

[dependencies]
ad_buy_engine = { version = "0.2.0", path = "../", feature=["backend","ua-parser"] }
awc = "2.0.3"
actix-web = {version="3.0.2",features = ["openssl"]}
actix-identity = "0.3.0"
actix = "0.10.0"
actix-redis = "0.9"
redis-async = "0.6.3"
mailgun-rs = "0.1.3"
openssl = "0.10.34"
actix-ratelimit = "0.3.1"
actix-files = "0.5.0"
futures = "0.3.15"
actix-service = "1.0.6"
lazy_static = "1.4.0"
argon2rs = "0.2.5"
jsonwebtoken = "7.2.0"
actix-cors = "0.5.4"
actix-web-middleware-redirect-scheme = "3.0.0"
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
time = "0.2.19"

serde = { version = "1.0.116", features = ["derive", "rc","alloc"] }
serde_derive = "1.0.116"
derive_more = "0.99.13"

#[dev-dependencies]
#actix-http-test = "2.0.0"

[features]
cockroach = []
mysql = []
postgres = []
sqlite = []
default = ["postgres"]