[package]
name = "main_server"
version = "0.1.0"
authors = ["John W. <johnwalton@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4.0.0-beta.6", features=["openssl"]}
awc = "3.0.0-beta.5"
actix-files = "0.6.0-beta.4"
actix-identity = "0.3.1"
actix-service = "2.0.0"
actix-cors = "0.6.0-beta.1"
actix-redis = "0.9.2"
actix-web-middleware-redirect-scheme = "3.0.0"
redis-async = "0.9.2"

ad_buy_engine = { version = "0.2.0", path = "../", feature=["backend"] }
actix = "0.11.1"
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
mailgun-rs = "0.1.3"
openssl = "0.10.34"
actix-ratelimit = "0.3.1"
futures = "0.3.15"
lazy_static = "1.4.0"
argon2rs = "0.2.5"
jsonwebtoken = "8.0.0-beta.2"
